src/css/modules/header.less
/**
 * Header
 */

.header {
    position: relative;
    margin: 0 auto;
    min-height: 100%;
    width: 100%;
    height: 100%;

    .bg-img {
        position: absolute;
        overflow: hidden;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        backface-visibility: hidden;

        img {
            min-width: 100%;
            min-height: 100%;

            .no-objectfit & {
                position: absolute;
                top: 0;
                left: 0;
                display: block;
            }

            .objectfit & {
                object-fit: cover;
            }
        }
    }

    .title {
        z-index: @z-index-1;
        margin: 0 auto;
        width: 100%;
        text-align: center;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%);

        @media @smartphones {

            .trigger::before {
                display: none;
            }
        }

        .headline1 {
            border-radius: @figure-radius;
            .boxshadow(1);
            .colorVar(background-color, --lightPrimaryColor, @lightPrimaryColor);
            padding: 1rem;
            position: relative;
            text-align: center;
            word-wrap: break-word;
        }

        .subline {
            font-size: 2.5rem;
        }

        p {
            margin: 0 auto;
        }
    }
}

.intro-effect-side {
    height: 100%;

    &:not(.notrans) .trigger {
        transition: opacity 0.3s 0.5s;
    }

    &.modify:not(.notrans) {

        .trigger {
            opacity: 0;
            pointer-events: none;
            transition-delay: 0s;
        }

        .share-btn {
            left: initial;
            bottom: 3em;
        }

        .to-top-btn {
            left: initial;
            bottom: 1em;
        }
    }

    .trigger {
        bottom: 0;
        position: absolute;
        width: 100%;
        height: 90px;
        text-align: center;
        cursor: pointer;
        color: transparent;
        background: transparent;
        border: 0;
        z-index: @z-index-2;

        .icon {
            color: black;
            width: 55px;
            height: 55px;
            margin: 0 auto;
            border-radius: @global-radius;
            .boxshadow(1);
            .colorVar(background-color, --primaryColor, @primaryColor);

            &::after {
                &:extend(.icon-font-more::after);
                font-size: 2rem;
                position: relative;
                top: 0.75rem;
            }

            &:focus {
                outline: none;
            }

            &:hover {
                .colorVar(background-color, --primaryColor, @primaryColor);
            }
        }
    }

    .share-btn,
    .to-top-btn {
        background-color: @accentColor;
        position: fixed;
        left: 100%;
        right: 1em;
        width: 55px;
        height: 55px;
        font-size: 2rem;
        text-align: center;
        margin: 0 auto;
        padding: 0;
        border-radius: @global-radius;
        user-select: none;
        z-index: @z-index-5;
    }

    .share-btn {
        color: transparent;

        &::before {
            transform: scale(0.75);
            left: 0.5rem;
            top: 0.5rem;
        }

        .sb-social.sb-left.active.sb-top {
            top: -0.5rem;
            transform: translate(calc(-92%), -100%);
        }
    }

            &.sb-left.active.sb-top {
                left: 0.65em;
                top: -0.65em;
                transform: translate(calc(-92%), -100%);
            }

        &::before {
            .colorVar(color, --primaryTextColor, @primaryTextColor);
            &:extend(.icon-font-up::after);
            position: relative;
            left: 0.75rem;
            top: 0.5rem;
        }
    }

}

